python-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-api
  labels:
    app: python-api
spec:
  type: ClusterIP # ClusterIP for internal, LoadBalancer for external, NodePort for specific nodes, ExternalName for external DNS
  ports:
    - name: http-port
      port: 80
      targetPort: 5000
      protocol: TCP
  selector:
    app: python-api
